src/fluxcd/apps/jellyfin/assets/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      runtimeClassName: nvidia
      containers:
      - name: jellyfin
        image: docker.io/jellyfin/jellyfin
        imagePullPolicy: Always
        ports:
          - containerPort: 8096
            name: http-jellyfin
            protocol: TCP
        volumeMounts:
          - name: jellyfin-config
            mountPath: /config
          - name: media # Backed by datashim
            mountPath: /nas
          - name: tmpfs
            mountPath: /transcode
        livenessProbe:
          httpGet:
            path: /health
            port: http-jellyfin
          initialDelaySeconds: 300
          periodSeconds: 10
        resources:
          limits:
            nvidia.com/gpu: 1
      volumes:
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      - name: tmpfs
        emptyDir:
          medium: Memory
      dnsConfig:
        options:
          - name: ndots
            value: "1"
